18668
```scala
scala> val xs = q"1" :: q"2" :: Nil
xs: List[reflect.runtime.universe.Literal] = List(1, 2)

scala> q"{..$xs}"
res1: reflect.runtime.universe.Tree =
{
  1;
  2
}

scala> q"..$xs"
<console>:31: error: Can't splice with .. here
              q"..$xs"
                   ^
```
